--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -3,10 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.AspNetCore.SignalR": "Debug",
+      //"Microsoft.AspNetCore.SignalR": "Debug",
       //"Microsoft.AspNetCore.Http.Connections": "Debug",
-      "Microsoft.AspNetCore.Mvc.Formatters": "Debug",
-      "System.Xml.Serialization": "Debug",
+      //"Microsoft.AspNetCore.Mvc.Formatters": "Debug",
+      //"System.Xml.Serialization": "Debug",
       //"StreamMaster.SchedulesDirectAPI.Services.SchedulesDirectService": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information"
