--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -8,9 +8,9 @@
       //"Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       //"System.Xml.Serialization": "Debug",
       //"StreamMaster.SchedulesDirectAPI.Services.SchedulesDirectService": "Debug",
-      "StreamMasterInfrastructure.VideoStreamManager": "Debug",
-      "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information"
-      //"StreamMasterInfrastructure.Authentication": "Debug"
+      "StreamMaster.Infrastructure.VideoStreamManager": "Debug",
+      "StreamMaster.Application.Common.Interfaces.ICircularRingBuffer": "Information"
+      //"StreamMaster.Infrastructure.Authentication": "Debug"
     }
   },
   "AllowedHosts": "*"
