hdhr/epg/m3u fixes

--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -12,13 +12,14 @@
       "StreamMaster.Application.Common.Interfaces.ICircularRingBuffer": "Information",
       "StreamMaster.Infrastructure.VideoStreamManager.Buffers.CircularRingBuffer": "Debug",
       "StreamMaster.Infrastructure.VideoStreamManager.Buffers": "Information",
+      "StreamMaster.Infrastructure.Services.Downloads": "Information",
       "StreamMaster.Logging": "Information",
       "StreamMaster.Logging.StatsLogger": "Information",
       "StreamMaster.Logging.ReadsLogger": "Information",
       "StreamMaster.Logging.OverWLogger": "Information",
       "StreamMaster.Logging.WriteLogger": "Information",
       "StreamMaster.Logging.WaitsLogger": "Information",
-      "StreamMaster.Logging.Dist_Logger": "Information"      
+      "StreamMaster.Logging.Dist_Logger": "Information"
     }
   },
   "AllowedHosts": "*"
