--- a/StreamMaster.Streams.Domain/StreamMaster.Streams.Domain.csproj
+++ b/StreamMaster.Streams.Domain/StreamMaster.Streams.Domain.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
+    <Compile Remove="Enums\**" />
+    <EmbeddedResource Remove="Enums\**" />
+    <None Remove="Enums\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Enums\" />
+    <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
   </ItemGroup>
 
 </Project>
