cache improvement with selectors

--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -3,11 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      //"Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.SignalR": "Debug",
       //"Microsoft.AspNetCore.Http.Connections": "Debug",
       //"Microsoft.AspNetCore.Mvc.Formatters": "Debug",
-      //"System.Xml.Serialization": "Debug",
-      //"StreamMaster.SchedulesDirectAPI.Services.SchedulesDirectService": "Debug",
+      //"System.Xml.Serialization": "Debug",      
       "StreamMaster.Infrastructure.VideoStreamManager": "Debug",
       "StreamMaster.Application.Common.Interfaces.ICircularRingBuffer": "Information",
       "StreamMaster.Infrastructure.VideoStreamManager.Buffers.CircularRingBuffer": "Debug",
