--- a/StreamMaster.Infrastructure.EF/StreamMaster.Infrastructure.EF.csproj
+++ b/StreamMaster.Infrastructure.EF/StreamMaster.Infrastructure.EF.csproj
@@ -13,9 +13,12 @@
   <ItemGroup>
     <PackageReference Include="EFCore.BulkExtensions.Sqlite" Version="8.0.1" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.7" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StreamMaster.Application\StreamMaster.Application.csproj" />
