vite upgrade to 5

--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -1,8 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
-    "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.2",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.7",
@@ -12,27 +13,27 @@
     "primereact": "^10.3.3",
     "react": "latest",
     "react-dom": "latest",
-    "react-intl": "^6.5.5",
+    "react-intl": "^6.6.2",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "latest",
-    "react-router-dom": "^6.21.2",
+    "react-router-dom": "^6.21.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.1",
-    "vite": "^4.5.2"
+    "vite": "^5.0.12"
   },
   "devDependencies": {
     "@rtk-query/codegen-openapi": "^1.0.0",
     "@types/chroma-js": "^2.4.3",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
+    "@types/node": "^20.11.7",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-redux": "^7.1.33",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "esbuild": "^0.19.11",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "esbuild": "^0.19.12",
     "esbuild-runner": "^2.2.2",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -45,7 +46,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-tailwindcss": "^3.13.1",
+    "eslint-plugin-tailwindcss": "^3.14.0",
     "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "typescript": "^5.3.3"
