--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -15,7 +15,7 @@
       "StreamMaster.Logging": "Information",
       "StreamMaster.Logging.StatsLogger": "Information",
       "StreamMaster.Logging.ReadsLogger": "Information",
-      "StreamMaster.Logging.OverWLogger": "Information",
+      "StreamMaster.Logging.CircularBufferLogger": "Information",
       "StreamMaster.Logging.WriteLogger": "Information",
       "StreamMaster.Logging.WaitsLogger": "Information",
       "StreamMaster.Logging.Dist_Logger": "Information"
