feat(packaging): Work on CI Pipeline

--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
       "main",
-      "next",
-      "next-major",
       {
         "name": "beta",
         "prerelease": true
@@ -17,15 +15,32 @@
       {
         "name": "alpha",
         "prerelease": true
+      },
+      {
+        "name": "!main",
+        "prerelease": true
       }
     ],
+    "ci": false,
     "debug": true,
-    "dryRun": true,
+    "dryRun": false,
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/git"
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "CHANGELOG.md"
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "CHANGELOG.md"
+          ]
+        }
+      ]
     ]
   }
 }
