--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@semantic-release/exec",
         {
           "verifyConditionsCmd": ":",
-          "publishCmd": "node updateAssemblyInfo.js ${nextRelease.version}"
+          "publishCmd": "node updateAssemblyInfo.js ${nextRelease.version} && git add ./StreamMaster.API/AssemblyInfo.cs && git diff-index --quiet HEAD || git commit -m 'chore: update AssemblyInfo.cs to version ${nextRelease.version}'"
         }
       ],
       [
