fix(build): :zap: fix up build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "dotnet.defaultSolution": "StreamMaster.sln"
+  "dotnet.defaultSolution": "StreamMaster.sln",
+  "conventionalCommits.scopes": ["build"]
 }
