--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -20,6 +21,5 @@
       "StreamMaster.Logging.WaitsLogger": "Information",
       "StreamMaster.Logging.Dist_Logger": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
