feat: add in psql support

--- a/StreamMaster.API/StreamMaster.API.csproj
+++ b/StreamMaster.API/StreamMaster.API.csproj
@@ -70,6 +70,7 @@
     <PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\StreamMaster.Infrastructure.EF.PSQL\StreamMaster.Infrastructure.EF.PSQL.csproj" />
     <ProjectReference Include="..\StreamMaster.Infrastructure\StreamMaster.Infrastructure.csproj" />
     <ProjectReference Include="..\StreamMaster.SchedulesDirect.Services\StreamMaster.SchedulesDirect.Services.csproj" />
     <ProjectReference Include="..\StreamMaster.Streams\StreamMaster.Streams.csproj" />
