--- a/TestCreator/TestCreator.csproj
+++ b/TestCreator/TestCreator.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StreamMaster.Infrastructure.EF.PSQL\StreamMaster.Infrastructure.EF.PSQL.csproj" />
     <ProjectReference Include="..\StreamMaster.Infrastructure\StreamMaster.Infrastructure.csproj" />
   </ItemGroup>
 
