feat: Add Dockerfile changes and expose port 5432
Added changes to the Dockerfile to expose port 5432.

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -23,6 +23,8 @@ COPY env.sh /env.sh
 RUN chmod +x /entrypoint.sh /env.sh
 RUN mkdir /config
 
+EXPOSE 5432
+
 ENTRYPOINT ["/entrypoint.sh", "dotnet", "StreamMaster.API.dll"]
 
 STOPSIGNAL SIGINT
