--- a/StreamMaster.Infrastructure.EF.SQLite/StreamMaster.Infrastructure.EF.SQLite.csproj
+++ b/StreamMaster.Infrastructure.EF.SQLite/StreamMaster.Infrastructure.EF.SQLite.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.4" />
-    <PackageReference Include="EFCore.BulkExtensions.Sqlite" Version="8.0.1" />
+    <PackageReference Include="EFCore.BulkExtensions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.8" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.1" />
