--- a/StreamMaster.Infrastructure/StreamMaster.Infrastructure.csproj
+++ b/StreamMaster.Infrastructure/StreamMaster.Infrastructure.csproj
@@ -40,6 +40,7 @@
     <ProjectReference Include="..\StreamMaster.Application\StreamMaster.Application.csproj" />
     <ProjectReference Include="..\StreamMaster.Infrastructure.EF.PGSQL\StreamMaster.Infrastructure.EF.PGSQL.csproj" />
     <ProjectReference Include="..\StreamMaster.Infrastructure.EF.SQLite\StreamMaster.Infrastructure.EF.SQLite.csproj" />
+    <ProjectReference Include="..\StreamMaster.Infrastructure.EF\StreamMaster.Infrastructure.EF.csproj" />
     <ProjectReference Include="..\StreamMaster.Logging\StreamMaster.Logging.csproj" />
     <ProjectReference Include="..\StreamMaster.SchedulesDirect\StreamMaster.SchedulesDirect.csproj" />
     <ProjectReference Include="..\StreamMaster.Streams\StreamMaster.Streams.csproj" />
