feat: Add support for M3U settings in the API
Changes:
- Added M3USettings interface to define M3U settings
- Updated UpdateSettingRequest interface to include M3USettings
- Removed unused M3U setting fields from M3USettings interface and UpdateSettingRequest interface
- Updated FilesEPGM3USettings component to remove checkboxes for unused M3U setting fields

--- a/StreamMaster.API/logsettings.json
+++ b/StreamMaster.API/logsettings.json
@@ -14,7 +14,7 @@
       "StreamMaster.Infrastructure.Services.Downloads": "Information",
       "StreamMaster.Logging": "Information",
       "StreamMaster.Logging.StatsLogger": "Information",
-      "StreamMaster.Logging.ReadsLogger": "Debug",
+      "StreamMaster.Logging.ReadsLogger": "Information",
       "StreamMaster.Logging.CircularBufferLogger": "Information",
       "StreamMaster.Logging.WriteLogger": "Information",
       "StreamMaster.Logging.WaitsLogger": "Information",
