refactor: update log settings for VideoStreamManager

--- a/StreamMaster.API/logsettings.json
+++ b/StreamMaster.API/logsettings.json
@@ -7,9 +7,9 @@
       "Microsoft.AspNetCore.Http.Connections": "Information",
       //"Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       //"System.Xml.Serialization": "Debug",      
-      "StreamMaster.Infrastructure.VideoStreamManager": "Debug",
+      "StreamMaster.Infrastructure.VideoStreamManager": "Information",
       "StreamMaster.Application.Common.Interfaces.ICircularRingBuffer": "Information",
-      "StreamMaster.Infrastructure.VideoStreamManager.Buffers.CircularRingBuffer": "Debug",
+      "StreamMaster.Infrastructure.VideoStreamManager.Buffers.CircularRingBuffer": "Information",
       "StreamMaster.Infrastructure.VideoStreamManager.Buffers": "Information",
       "StreamMaster.Infrastructure.Services.Downloads": "Information",
       "StreamMaster.Logging": "Information",
