--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,21 +1,11 @@
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG TARGETPLATFORM
-ARG TARGETARCH
 ARG BUILDPLATFORM
 
-# RUN mkdir -p /etc/apt/keyrings
-# RUN apt-get update -yq \
-#     && apt-get upgrade -yq \
-#     && apt-get install -yq ca-certificates curl gnupg git
-    
-# RUN curl -sL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-#     && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-#     && update-ca-certificates
+RUN apt-get update -yq \
+    && apt-get upgrade -yq 
 
-# RUN apt-get update && \
-#     apt-get install -yq nodejs build-essential 
-
-RUN curl -fsSL https://deb.nodesource.com/setup_21.x | bash - &&\
+RUN curl -fsSL https://deb.nodesource.com/setup_21.x | bash - && \
     apt-get install -y nodejs
 
 RUN rm -rf /var/lib/apt/lists/* \
