--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,7 +1,8 @@
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM --platform=$TARGETPLATFORM  mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 ARG TARGETPLATFORM
 ARG TARGETARCH
 ARG BUILDPLATFORM
+ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
 
 RUN apt-get update -yq \
     && apt-get upgrade -yq \
