--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,7 +1,8 @@
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM --platform=$TARGETPLATFORM  mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG TARGETPLATFORM
 ARG TARGETARCH
 ARG BUILDPLATFORM
+ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
 
 RUN apt-get update -yq \
     && apt-get upgrade -yq 
