build: update docker builds

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -6,9 +6,7 @@ ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
 
 RUN apt-get update -yq \
     && apt-get upgrade -yq \
-    && apt-get install -yq --no-install-recommends ffmpeg gosu postgresql postgresql-common curl gnupg lsb-release 
-
-RUN rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
-
-RUN mkdir /docker-entrypoint-initdb.d
+    && apt-get install -yq --no-install-recommends ffmpeg gosu postgresql postgresql-common curl gnupg lsb-release \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && mkdir /docker-entrypoint-initdb.d
