--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -5,10 +5,8 @@ ARG BUILDPLATFORM
 ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
 
 RUN apt-get update -yq \
-    && apt-get upgrade -yq 
-
-RUN curl -fsSL https://deb.nodesource.com/setup_21.x | bash - && \
-    apt-get install -y nodejs
-
-RUN rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    && apt-get upgrade -yq \
+    && curl -fsSL https://deb.nodesource.com/setup_21.x | bash - \
+    && apt-get install --no-install-recommends -yq nodejs \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
