--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,14 +1,8 @@
-FROM --platform=$TARGETPLATFORM  mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-ARG TARGETPLATFORM
-ARG TARGETARCH
-ARG BUILDPLATFORM
-ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 
 RUN apt-get update -yq \
     && apt-get upgrade -yq \
-    && apt-get install -yq --no-install-recommends ffmpeg gosu postgresql postgresql-common curl gnupg lsb-release 
-
-RUN rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
-
-RUN mkdir /docker-entrypoint-initdb.d
+    && apt-get install -yq --no-install-recommends ffmpeg gosu postgresql postgresql-common curl gnupg lsb-release \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && mkdir /docker-entrypoint-initdb.d
