--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,14 +1,8 @@
-FROM --platform=$TARGETPLATFORM  mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG TARGETPLATFORM
-ARG TARGETARCH
-ARG BUILDPLATFORM
-ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 RUN apt-get update -yq \
-    && apt-get upgrade -yq 
-
-RUN curl -fsSL https://deb.nodesource.com/setup_21.x | bash - && \
-    apt-get install -y nodejs
-
-RUN rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    && apt-get upgrade -yq \
+    && curl -fsSL https://deb.nodesource.com/setup_21.x | bash - \
+    && apt-get install --no-install-recommends -yq nodejs \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
