build: add in logsettings.json

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -12,6 +12,8 @@ ENV PGID=0
 
 COPY --from=sm /app/publish /app
 
+COPY logsettings.json /app/logsettings.json
+
 COPY docker-entrypoint.sh docker-ensure-initdb.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh /usr/local/bin/docker-ensure-initdb.sh
 RUN ln -sT docker-ensure-initdb.sh /usr/local/bin/docker-enforce-initdb.sh
