--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -5,7 +5,7 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.AspNetCore.SignalR": "Information",
-      "Microsoft.AspNetCore.Http.Connections": "Information",
+      "Microsoft.AspNetCore.Http.Connections": "Debug",
       //"Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       //"System.Xml.Serialization": "Debug",      
       "StreamMaster.Infrastructure.VideoStreamManager": "Information",
