--- a/streammasterwebui/.vscode/extensions.json
+++ b/streammasterwebui/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "ZixuanChen.vitest-explorer"]
+  "recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode"]
 }
