--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -2,12 +2,12 @@
   "type": "module",
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
-    "@mui/icons-material": "^5.15.6",
-    "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^1.9.7",
+    "@vidstack/react": "^1.10.9",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
+    "hls.js": "^1.5.6",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.3",
@@ -24,6 +24,7 @@
     "vite": "^5.0.12"
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.15.10",
     "@rtk-query/codegen-openapi": "^1.0.0",
     "@types/chroma-js": "^2.4.3",
     "@types/node": "^20.11.7",
