Started on SMStreams

--- a/StreamMaster.Application/StreamMaster.Application.csproj
+++ b/StreamMaster.Application/StreamMaster.Application.csproj
@@ -65,6 +65,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\Logging\" />
+    <Folder Include="SMStreams\Commands\" />
+    <Folder Include="SMStreams\Hub\" />
+    <Folder Include="SMChannels\Commands\" />
+    <Folder Include="SMChannels\Hub\" />
+    <Folder Include="SMChannels\Queries\" />
     <Folder Include="StreamGroupVideoStreams\EventHandlers\" />
     <Folder Include="StreamGroupVideoStreams\Events\" />
     <Folder Include="VideoStreamLinks\EventHandlers\" />
