--- a/StreamMaster.API/StreamMaster.API.csproj
+++ b/StreamMaster.API/StreamMaster.API.csproj
@@ -9,7 +9,7 @@
     <AssemblyVersion>
     </AssemblyVersion>
     <FileVersion>
-    </FileVersion>
+    </FileVersion>F
     <InformationalVersion>0.1.0-alpha.582+Branch.develop.Sha.95b3b4eac9a11372a0e6e5d32be2790dfac1813b</InformationalVersion>
     <Version>$(VersionPrefix)</Version>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
