--- a/StreamMaster.API/Properties/launchSettings.json
+++ b/StreamMaster.API/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://+:7095"
+        "ASPNETCORE_URLS": "http://+:7095",
+        "POSTGRES_HOST": "127.0.0.1"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://10.6.10.92:7095",
