--- a/StreamMaster.Domain/StreamMaster.Domain.csproj
+++ b/StreamMaster.Domain/StreamMaster.Domain.csproj
@@ -27,8 +27,9 @@
     <PackageReference Include="EFCore.BulkExtensions" Version="8.0.2" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Reinforced.Typings" Version="1.6.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
-    <PackageReference Include="X.PagedList.EF" Version="8.4.7" />
+    <PackageReference Include="X.PagedList.EF" Version="9.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Features" Version="8.0.3" />
