--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -7,8 +7,8 @@
     "axios": "latest",
     "chroma-js": "latest",
     "hls.js": "latest",
-    "primeicons": "latest",
-    "primereact": "latest",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.2",
     "react": "latest",
     "react-dom": "latest",
     "react-intl": "latest",
