--- a/StreamMaster.Domain/StreamMaster.Domain.csproj
+++ b/StreamMaster.Domain/StreamMaster.Domain.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="EFCore.BulkExtensions" Version="8.0.2" />
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="MessagePack.Annotations" Version="2.5.108" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Reinforced.Typings" Version="1.6.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
