--- a/StreamMaster.SchedulesDirect.Domain/StreamMaster.SchedulesDirect.Domain.csproj
+++ b/StreamMaster.SchedulesDirect.Domain/StreamMaster.SchedulesDirect.Domain.csproj
@@ -5,4 +5,7 @@
     <Nullable>enable</Nullable>
    
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="MessagePack.Annotations" Version="2.5.108" />
+  </ItemGroup>
 </Project>
