--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-react-hooks-addons": "^0.3.1",
     "eslint-plugin-sort-keys-fix": "latest",
     "eslint-plugin-tailwindcss": "latest",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
